--- a/tk-workshop-sensor/platformio.ini
+++ b/tk-workshop-sensor/platformio.ini
@@ -9,6 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:esp32doit-devkit-v1]
-platform = espressif32
+platform = espressif32@3.5.0
 board = esp32doit-devkit-v1
 framework = arduino
+lib_deps = nkolban/ESP32 BLE Arduino@^1.0.1
